added stop function and retry custom error message

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "test": "jest --watch",
-    "build": "tsc"
+    "build": "tsc",
+    "coverage": "jest --collectCoverage"
   },
   "jest": {
     "preset": "ts-jest"
